Final-project/Bicep-app/azuregen/nsg.json
{
    "name": "adminserver-nsg",
    "id": "/subscriptions/c4ad36f6-e6a1-405f-afd4-321e43455706/resourceGroups/ad_group/providers/Microsoft.Network/networkSecurityGroups/adminserver-nsg",
    "etag": "W/\"eee928f5-ded1-4149-b8a8-fa62b36121c1\"",
    "type": "Microsoft.Network/networkSecurityGroups",
    "location": "westeurope",
    "properties": {
        "provisioningState": "Succeeded",
        "resourceGuid": "f80a3e65-f98b-4445-bd47-f72660a48a45",
        "securityRules": [
            {
                "name": "RDP",
                "id": "/subscriptions/c4ad36f6-e6a1-405f-afd4-321e43455706/resourceGroups/ad_group/providers/Microsoft.Network/networkSecurityGroups/adminserver-nsg/securityRules/RDP",
                "etag": "W/\"eee928f5-ded1-4149-b8a8-fa62b36121c1\"",
                "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                "properties": {
                    "provisioningState": "Succeeded",
                    "protocol": "TCP",
                    "sourcePortRange": "*",
                    "destinationPortRange": "3389",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 300,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                }
            },
            {
                "name": "HTTPS",
                "id": "/subscriptions/c4ad36f6-e6a1-405f-afd4-321e43455706/resourceGroups/ad_group/providers/Microsoft.Network/networkSecurityGroups/adminserver-nsg/securityRules/HTTPS",
                "etag": "W/\"eee928f5-ded1-4149-b8a8-fa62b36121c1\"",
                "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                "properties": {
                    "provisioningState": "Succeeded",
                    "protocol": "TCP",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 320,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                }
            },
            {
                "name": "HTTP",
                "id": "/subscriptions/c4ad36f6-e6a1-405f-afd4-321e43455706/resourceGroups/ad_group/providers/Microsoft.Network/networkSecurityGroups/adminserver-nsg/securityRules/HTTP",
                "etag": "W/\"eee928f5-ded1-4149-b8a8-fa62b36121c1\"",
                "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                "properties": {
                    "provisioningState": "Succeeded",
                    "protocol": "TCP",
                    "sourcePortRange": "*",
                    "destinationPortRange": "80",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 340,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                }
            }
        ],
        "defaultSecurityRules": [
            {
                "name": "AllowVnetInBound",
                "id": "/subscriptions/c4ad36f6-e6a1-405f-afd4-321e43455706/resourceGroups/ad_group/providers/Microsoft.Network/networkSecurityGroups/adminserver-nsg/defaultSecurityRules/AllowVnetInBound",
                "etag": "W/\"eee928f5-ded1-4149-b8a8-fa62b36121c1\"",
                "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                }
            },
            {
                "name": "AllowAzureLoadBalancerInBound",
                "id": "/subscriptions/c4ad36f6-e6a1-405f-afd4-321e43455706/resourceGroups/ad_group/providers/Microsoft.Network/networkSecurityGroups/adminserver-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                "etag": "W/\"eee928f5-ded1-4149-b8a8-fa62b36121c1\"",
                "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                }
            },
            {
                "name": "DenyAllInBound",
                "id": "/subscriptions/c4ad36f6-e6a1-405f-afd4-321e43455706/resourceGroups/ad_group/providers/Microsoft.Network/networkSecurityGroups/adminserver-nsg/defaultSecurityRules/DenyAllInBound",
                "etag": "W/\"eee928f5-ded1-4149-b8a8-fa62b36121c1\"",
                "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                }
            },
            {
                "name": "AllowVnetOutBound",
                "id": "/subscriptions/c4ad36f6-e6a1-405f-afd4-321e43455706/resourceGroups/ad_group/providers/Microsoft.Network/networkSecurityGroups/adminserver-nsg/defaultSecurityRules/AllowVnetOutBound",
                "etag": "W/\"eee928f5-ded1-4149-b8a8-fa62b36121c1\"",
                "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                }
            },
            {
                "name": "AllowInternetOutBound",
                "id": "/subscriptions/c4ad36f6-e6a1-405f-afd4-321e43455706/resourceGroups/ad_group/providers/Microsoft.Network/networkSecurityGroups/adminserver-nsg/defaultSecurityRules/AllowInternetOutBound",
                "etag": "W/\"eee928f5-ded1-4149-b8a8-fa62b36121c1\"",
                "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                }
            },
            {
                "name": "DenyAllOutBound",
                "id": "/subscriptions/c4ad36f6-e6a1-405f-afd4-321e43455706/resourceGroups/ad_group/providers/Microsoft.Network/networkSecurityGroups/adminserver-nsg/defaultSecurityRules/DenyAllOutBound",
                "etag": "W/\"eee928f5-ded1-4149-b8a8-fa62b36121c1\"",
                "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                }
            }
        ],
        "networkInterfaces": [
            {
                "id": "/subscriptions/c4ad36f6-e6a1-405f-afd4-321e43455706/resourceGroups/ad_group/providers/Microsoft.Network/networkInterfaces/adminserver867"
            }
        ]
    }
}
